[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "pymavlink-sandbox"
dynamic = ["version"]
authors = [
  { name="Ben Sembira", email="classified@classified.classified" },
]
description = "A sandbox for using pymavlink and creating POC projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pymavlink",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/ben-sembira-1/https://github.com/ben-sembira-1/Pymavlink-Sandbox"
Issues = "https://github.com/ben-sembira-1/https://github.com/ben-sembira-1/Pymavlink-Sandbox/issues"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools_scm]