[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "template"
version = "0.0.0"
authors = [
  { name="Ben Sembira", email="ben.sembira.dev@gmail.com" },
]
description = "template"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ben-sembira-1/Pymavlink-Sandbox"
Issues = "https://github.com/ben-sembira-1/Pymavlink-Sandbox"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
